# marty_decimal

./: .gitignore  CMakeLists.txt  marty_bcd.h  marty_bcd_decimal.h  marty_bcd_decimal_impl.h  marty_decimal.h  marty_decimal_math.h  marty_int_decimal.h  marty_int_decimal_impl.h  marty_relops_impl.h  undef_min_max.h
tests/: marty_decimal_tests.sln  run_benchmark_tests.bat  run_pi_test.bat  run_regression_tests.bat  run_test.bat
tests/bat/: setup_toolset_platform_config.bat
tests/doc/: benchmark_test_sets.txt  benchmark_tests.txt  benchmark_tests_pc01.txt  benchmark_tests_pc02.txt  links.txt  pi_test.txt
tests/src/: benchmark_tests.cpp  cpp.h  pi_test.cpp  regression_tests.cpp  safe_main.h
tests/vcxproj/: benchmark_tests.vcxproj  benchmark_tests.vcxproj.filters  pi_test.vcxproj  regression_tests.vcxproj  regression_tests.vcxproj.filters
tests/zulibs/marty_cpp/: marty_cpp.h  marty_long_ints.h
warnings/: disable_C5045.h  disable_spectre_mitigation.h  pop.h  push.h  push_disable_spectre_mitigation.h
